# FinTechAI-product-analytics-project

./: .env.example  .gitignore  CLAUDE.md  README.md  compass_artifact_wf-ba774096-7a0c-4f95-a827-3f0d01dff8d0_text_markdown.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: app.py  build_snapshots.py  cusum.py  requirements.txt
dashboard/data/: build_meta.json  causal_summary.json  cusum_meta.json  cusum_series.csv  experiment_summary.json  fairness_summary.json  funnel.csv  latency_cohorts.csv  llm_cost.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: _marts.yml  fct_funnel.sql  fct_latency_cohorts.sql  fct_llm_cost.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_funnel_events.sql  stg_llm_traces.sql  stg_loans.sql  stg_users.sql
docs/: BACKLOG.md
docs/adr/: 0001-statistical-methods.md
experiments/: analyze_experiment.py  causal_backdoor.py  simulate_experiment.py
llm/: gateway.py
synthetic-data/: generate.py  load_duckdb.py
